--- a/styles/style.css
+++ b/styles/style.css
@@ -244,6 +244,7 @@ header{
     margin-top: 31px;
     width: 325px;
     height: 60px;
+    color: white;
 }
 .subscribe button{
     color: orangered;
