border margin resolved

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 body{
     height: 4212px;
     width: 1600px;
-    margin: 30px auto;
+    margin: 0 auto;
     font-family: 'Work Sans', sans-serif;;
 }
 
